nuevos cambios en el index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1 class="titulo">Diseño <span>Trabajo Final</span></h1>
+    <h1 class="titulo">DIGITAL <span>TECHNOLOGY</span></h1>
   </header>
   <div class="nav-bg">
     <nav class="navegacion-principal contenedor" aria-label="Menú principal">
@@ -111,8 +111,15 @@
               <label>Mensaje</label>
               <textarea class="input-text"></textarea>
             </div>
+            
+            <div class="campo">
+              <input type="checkbox" id="privacidad" required>
+              <label for="privacidad" class="checkbox-label">
+              Acepto la <a href="privacidad.html." target="_blank" rel="noopener noreferrer">Política de Privacidad</a>
+              </label>
+            </div>
           </div><!--.contenedor-campos-->
-
+          
           <div class="alinear-derecha flex">
             <input class="boton" w-100 type="submit" value="Enviar">
           </div>
@@ -125,6 +132,7 @@
   </main>
   
   <footer class="footer">
+
    <section class="redes-sociales" aria-label="Redes sociales">
   <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
@@ -152,6 +160,12 @@
     </svg>
   </a>
 </section>
+
+<!-- Logo -->
+    <div class="logo-footer">
+      <img src="../images/logo.png" alt="Logo Digital Technology" />
+      </div>
+    </div>
 
     <p>&copy; 2025 Mi Sitio. <a href="./privacidad.html">Política de Privacidad</a>. ¡Gracias por visitar!</p>
   </footer>
