--- a/index.html
+++ b/index.html
@@ -114,9 +114,7 @@
             
             <div class="campo">
               <input type="checkbox" id="privacidad" required>
-              <label for="privacidad" class="checkbox-label">
-              Acepto la <a href="privacidad.html." target="_blank" rel="noopener noreferrer">Política de Privacidad</a>
-              </label>
+              <label for="privacidad" class="checkbox-label">Acepto la <a href="privacidad.html." target="_blank" rel="noopener noreferrer">Política de Privacidad</a></label>
             </div>
           </div><!--.contenedor-campos-->
           
