--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <div class="nav-bg">
     <nav class="navegacion-principal contenedor" aria-label="Menú principal">
-      <a href="#">Inicio</a>
+      <a href="index.html" class="activo">Inicio</a>
       <a href="views/productos.html">Productos</a>
       <a href="views/presupuesto.html">Presupuesto</a>
       <a href="views/contacto.html">Contacto</a>
